<resources>
    <string name="app_name">First Reach 100 !!!</string>
    <string name="click">click</string>
    <string name="welcome_to_new_page">welcome to new page</string>
    <string name="sn_jndnm_nmmd_sm">sn jndnm nmmd sm</string>
    <string name="instruction_for_the_game">INSTRUCTION FOR THE GAME</string>
    <string name="instruction_for_the_game_G">INSTRUCTION FOR THE GAME</string>
    <string name="instruction_for_the_game_GG">INSTRUCTION FOR THE GAME</string>
    <string name="textview">TextView</string>
    <string name="text_messages_are_used_for_personal_family_business_and_social_purposes_governmental_and_non_governmental_organizations_use_text_messaging_for_communication_between_colleagues_in_the_2010s_the_sending_of_short_informal_messages_became_an_accepted_part_of_many_cultures_as_happened_earlier_with_emailing_1_this_makes_texting_a_quick_and_easy_way_to_communicate_with_friends_family_and_colleagues_including_in_contexts_where_a_call_would_be_impolite_or_inappropriate_e_g_calling_very_late_at_night_or_when_one_knows_the_other_person_is_busy_with_family_or_work_activities_like_e_mail_and_voicemail_and_unlike_calls_in_which_the_caller_hopes_to_speak_directly_with_the_recipient_texting_does_not_require_the_caller_and_recipient_to_both_be_free_at_the_same_moment_this_permits_communication_even_between_busy_individuals_text_messages_can_also_be_used_to_interact_with_automated_systems_for_example_to_order_products_or_services_from_e_commerce_websites_or_to_participate_in_online_contests_advertisers_and_service_providers_use_direct_text_marketing_to_send_messages_to_mobile_users_about_promotions_payment_due_dates_and_other_notifications_instead_of_using_postal_mail_email_or_voicemail">Text messages are used for personal, family, business and social purposes. Governmental and non-governmental organizations use text messaging for communication between colleagues. In the 2010s, the sending of short informal messages became an accepted part of many cultures, as happened earlier with emailing.[1] This makes texting a quick and easy way to communicate with friends, family and colleagues, including in contexts where a call would be impolite or inappropriate (e.g., calling very late at night or when one knows the other person is busy with family or work activities). Like e-mail and voicemail and unlike calls (in which the caller hopes to speak directly with the recipient), texting does not require the caller and recipient to both be free at the same moment; this permits communication even between busy individuals. Text messages can also be used to interact with automated systems, for example, to order products or services from e-commerce websites, or to participate in online contests. Advertisers and service providers use direct text marketing to send messages to mobile users about promotions, payment due dates, and other notifications instead of using postal mail, email, or voicemail.</string>
    <string name="next">Next</string>
    <string name="button">Button</string>
    <string name="nextut">Next</string>
    <string name="todo">TODO</string>
    <string name="click_on_start_button_to_start_the_game">Click On Start Button To Start The Game</string>
    <string name="start">Start</string>
    <string name="select_the_starting_choice">Select The Starting Choice</string>
    <string name="select_the_starting_choiceA">Select The Starting Choice</string>
    <string name="computer">Computer</string>
    <string name="user">User</string>
    <string name="todoo">TODO</string>
    <string name="user_choice">User Choice :</string>
    <string name="enter_number">Enter Number:</string>
    <string name="enter_the_number">Enter the number</string>
    <string name="current_sum">Current Sum :</string>
    <string name="_0">0</string>
    <string name="add">Add</string>
    <string name="_00">0</string>
    <string name="textvieww">TextView</string>
    <string name="textviewww">TextView</string>
    <string name="_000">0</string>
    <string name="__0">0</string>
    <string name="addd">Add</string>
</resources>